--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,32 +1,31 @@
-<head>
-    <link rel="stylesheet" href="/styles.css" type="text/css">
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
     <title>Mini Message Board</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
     <h2>
         <%= title %>
-    </h2><br>
+    </h2>
     <ul>
         <% messages.forEach(message=> { %>
             <li>
-
-                <b>
-                    <%= message.user%>&colon;&nbsp;
-                </b>
+                <strong>
+                    <%= message.username %>:
+                </strong>
                 <%= message.text %>
                     <ul>
-                        <li>
-
-                            Date Added&colon;&nbsp;<%= message.added.toLocaleString() %>
+                        <li>Date Added: <%= new Date(message.added).toLocaleString() %>
                         </li>
                     </ul>
             </li>
             <% }); %>
     </ul>
     <h3><a href="/new">Add a New Message</a></h3>
-
 </body>
 
 </html>
